--- a/app/views/shared/_tweet.html.slim
+++ b/app/views/shared/_tweet.html.slim
@@ -1,7 +1,4 @@
 div
-  = link_to (image_tag tweet.user.twitter_profile_image_url), "/twitters/#{tweet.user.twitter_screen_name}"
-  /= tweet.text.gsub(/(@[a-z_]*)/, "hoge#{$1}fuga")
-  = tweet.text.gsub(/@([a-z_]*)/, "<a href='/twitters/#{$1}'>@#{$1}</a>").html_safe
-  /= tweet.text
-
+  = link_to (image_tag tweet.user.twitter_profile_image_url), "/twitters/#{tweet.user.twitter_screen_name}?refresh=1"
+  = tweet.text.gsub(/@([A-Za-z0-9_]*)/){|text_all| "<a href='/twitters/#{$1}?refresh=1'/>@#{$1}</a>"}.html_safe
 
