--- a/app/views/words/show.html.slim
+++ b/app/views/words/show.html.slim
@@ -1,4 +1,9 @@
 h1=@word.title
+
+=image_tag @word.wp_img
+p=@word.wp.html_safe
+
+hr
 - @word.tweets.each do |tweet|
   = render partial: 'shared/tweet', locals: {tweet: tweet}
-
+hr
