--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,5 +1,5 @@
 - if current_user
-  - current_user.home.each do |tweet|
+  - @tweets.each do |tweet|
     = render partial: 'shared/tweet', locals: {tweet: tweet}
 - else
   = link_to 'Twitter login', '/auth/twitter'
