--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -2,4 +2,6 @@
   - @tweets.each do |tweet|
     = render partial: 'shared/tweet', locals: {tweet: tweet}
 - else
+  h1 welcome to Shortest
+  p Shortest will sugget the shortest way from your knowledge to the knowledge that you want to know.
   = link_to 'Twitter login', '/auth/twitter'
